# Cpppppplus

./: CMakeLists.txt  README.md
include/LRvalue/: CMakeLists.txt  LRvalue.cpp
include/Ownership/: ownership.cpp
include/Rules/: CMakeLists.txt  rule_of_3.h  rule_of_5.cpp  rule_of_5.h  rules.cpp
include/SmartPtr/: smart_ptr_example.cpp
include/TypeDeduction/: CMakeLists.txt  type_deduction.cpp  type_deduction.h
include/threadz/: CMakeLists.txt  Taskz  Threadz
include/threadz/src/: taskz.cpp  threadz.cpp
